spring-boot/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-master-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /actuator/health/$1
spec:
  rules:
  - host: mydomain.infradev.k8s.sample.com
    http:
      paths:
      - path: /openapi
        pathType: Prefix
        backend:
          service:
            name: demo-master
            port: 
              number: 8080
      - path: /sm
        pathType: Prefix
        backend:
          service:
            name: demo-master
            port: 
              number: 8080
