spring-boot/deployment/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-redundant-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /actuator/health/$1
spec:
  rules:
  - host: mydomain.infradev.k8s.sample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-redundant
            port: 
              number: 8080
